--- a/templates/category/index.html.twig
+++ b/templates/category/index.html.twig
@@ -23,5 +23,9 @@
     <p>Aucune catégorie.</p>
 {% endif %}
 
+<ul>
+    <li><a href="{{ path('app_category_new') }}">Ajouter</a></li>
+</ul>
+
 </div>
 {% endblock %}
