--- a/templates/actor/index.html.twig
+++ b/templates/actor/index.html.twig
@@ -1,32 +1,41 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Liste des acteurs{% endblock %}
+{% block title %}Actor index{% endblock %}
 
 {% block body %}
+    <h1>Actor index</h1>
 
-<table>
-    <thead>
-        <tr>
-            <th>Firstname</th>
-            <th>Lastname</th>
-            <th>Gender</th>
-            <th>Birthday</th>
-        </tr>
-    </thead>
-    <tbody>
-{% for actor in actors %}
-    <tr>
-        <td>{{ actor.firstname }}</td>
-        <td>{{ actor.lastname|upper }}</td>
-        <td>{{ actor.gender=='m' 
-            ? "Homme" 
-            : (actor.gender=="f" ? "Femme":"Non binaire") }}</td>
-        <td>{{ actor.birthday|date("d/m/Y") }}</td>
-    </tr>
-{% else %}
-<p>Aucun acteur.</p>
-{% endfor %}
-    </tbody>
-</table>
+    <table class="table">
+        <thead>
+            <tr>
+                <th>Id</th>
+                <th>Firstname</th>
+                <th>Lastname</th>
+                <th>Birthday</th>
+                <th>Gender</th>
+                <th>actions</th>
+            </tr>
+        </thead>
+        <tbody>
+        {% for actor in actors %}
+            <tr>
+                <td>{{ actor.id }}</td>
+                <td>{{ actor.firstname }}</td>
+                <td>{{ actor.lastname }}</td>
+                <td>{{ actor.birthday ? actor.birthday|date('Y-m-d') : '' }}</td>
+                <td>{{ actor.gender }}</td>
+                <td>
+                    <a href="{{ path('app_actor_show', {'id': actor.id}) }}">show</a>
+                    <a href="{{ path('app_actor_edit', {'id': actor.id}) }}">edit</a>
+                </td>
+            </tr>
+        {% else %}
+            <tr>
+                <td colspan="6">no records found</td>
+            </tr>
+        {% endfor %}
+        </tbody>
+    </table>
 
+    <a href="{{ path('app_actor_new') }}">Create new</a>
 {% endblock %}
